[unified-server] Fix z-index battle between sign-in and image

--- a/packages/unified-server/landing/styles/landing.css
+++ b/packages/unified-server/landing/styles/landing.css
@@ -323,6 +323,8 @@ main {
       display: flex;
       align-items: center;
       flex-direction: column;
+      z-index: 1;
+      position: relative;
 
       & h1 {
         padding: var(--bb-grid-size-8) 0;
